@@ -139,7 +139,7 @@
 	<a name="watch-faces"></a>
 	<h3>Watch faces</h3>
 	<div>
-		Watch faces can be changed by vertical swipe. Selected watch face is saved and set as default after next system start.
+		Watch faces can be changed by horizonntal swipe. Selected watch face is saved and set as default after next system start.
 	</div>
 
 	<a name="alarm"></a>
