@@ -2,6 +2,7 @@ cyberWatch 1.1
 ========================
 - FEATURE: apps menu
 - FEATURE: apps cann be controled both vertical & horitontal swiping
+- REFACTOR: watches faces changed by horizontal swipe inestead of vertical
 - REFACTOR: renderTitle mehod in app
 - REFACTOR: StopPWatchRegistry class to store if stopwatch is running through whole app
 - REFACTOR: remove unused AppRunner apps array ('cause apps are managed by app menu)
